brat/test/golden/binding/cons.brat.golden
Error in test/golden/binding/cons.brat@FC {start = Pos {line = 6, col = 1}, end = Pos {line = 7, col = 31}}:


badUncons(List(Int)) -> Int, List(Int)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
badUncons(cons(stuff)) = stuff
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

  Unification error: Pattern doesn't match expected length for constructor args

